--- a/index.css
+++ b/index.css
@@ -1,4 +1,44 @@
-#heading{
-    color:red;
-    background-color: yellow;
+.header {
+  display: flex;
+  justify-content: space-between;
+  border: 1px solid black;
+}
+.logo {
+  width: 200px;
+}
+
+.nav-items {
+  padding: 0px 20px;
+}
+
+.nav-items > ul {
+  font-size: 24px;
+  display: flex;
+  list-style: none;
+}
+.nav-items > ul > li {
+  padding: 10px;
+  margin: 10px;
+}
+.res-card {
+  padding: 5px;
+  width: 200px;
+  background-color: lightpink;
+ 
+}
+.res-card:hover {
+  background-color: lightgrey;
+  border: 1px solid black;
+  cursor: pointer;
+}
+.search {
+  padding: 10px;
+}
+.res-logo {
+  width: 190px;
+}
+.res-container {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 5px;
 }
