--- a/index.css
+++ b/index.css
@@ -23,7 +23,9 @@
 .res-card {
   padding: 5px;
   width: 200px;
-  background-color: lightpink;
+  background-color: aliceblue;
+  margin:5px;
+  line-break: anywhere;
  
 }
 .res-card:hover {
@@ -46,4 +48,25 @@
 .filter-btn{
     margin:10px;
     cursor: pointer;
+}
+.shimmer-Card{
+  width: 200px;
+  height: 400px;
+  background-color: grey;
+  margin: 20px;
+}
+.shimmer-container{
+  display: flex;
+ flex-wrap: wrap;
+}
+.login{
+  padding: 0 20px;
+  cursor: pointer;
+  height: 43px;
+}
+.filter{
+display: flex;
+}
+.search-btn{
+margin-left: 5px;
 }
